# simple-prop-prover

./: CNFParser.hs  LICENSE  PHPGenerator.hs  ProofChecker.hs  PropProver.hs  simple-prop-prover.cabal
